--- a/gallery.html
+++ b/gallery.html
@@ -137,5 +137,32 @@ categoryButtons.forEach(button => {
 // Start by loading all logos
 loadLogosFromFirebase("all");
 </script>
+    <script>
+// Mobile menu toggle (no changes here)
+const menuToggle = document.getElementById("menu-toggle");
+// ... a bunch of correct code ...
+
+// Start listening for logos as soon as the page loads
+loadLogosFromFirebase();
+
+    // gallery.html - inside loadLogosFromFirebase() function  <-- DELETE FROM HERE
+// ...
+for (const key in logosData) {
+    // CHANGE THIS LINE:
+    const { title, imageUrl, category } = logosData[key]; // Use imageUrl
+    const div = document.createElement("div");
+    div.className = "gallery-item bg-gray-800 rounded-lg overflow-hidden shadow-lg";
+    div.innerHTML = `
+        <img src="${imageUrl}" alt="${title}" class="w-full h-48 object-cover" /> // Use imageUrl
+        <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">${title}</h3>
+            <p class="text-gray-300 mb-2">${category}</p>
+        </div>
+    `;
+    galleryGrid.appendChild(div);
+}
+//...                                                     <-- TO HERE
+
+</script>
 </body>
 </html>
