--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 
                 <div class="lg:w-1/2 flex justify-center">
                     <div class="relative">
-                        <img src="home.avif" alt="Featured logo animation showing a premium, sleek corporate identity design with golden accents" 
+                        <img src="https://drive.google.com/file/d/1gtW_IXOxfcTyDRtNKc4KSLuju8KviYeR/view?usp=drive_link" alt="Featured logo animation showing a premium, sleek corporate identity design with golden accents" 
                              class="logo-float w-full max-w-md rounded-lg shadow-2xl border border-gray-700">
                         <div class="absolute -bottom-6 -right-6 bg-gray-800 p-6 rounded-lg shadow-lg w-48">
                             <h3 class="text-xl font-bold mb-2">Featured Logo</h3>
