--- a/admin.html
+++ b/admin.html
@@ -70,6 +70,7 @@ transform: scale(1.05);
     <option value="Corporate">Corporate</option>
     <option value="Personal">Personal</option>
     <option value="Retail">Retail</option>
+    <option value="PNG">PNG Pics</option>
   </select>
 
   <button type="submit" class="bg-yellow-400 text-black px-4 py-2 rounded hover:bg-yellow-500">
