--- a/gallery.html
+++ b/gallery.html
@@ -62,7 +62,7 @@ body {
         <button class="category-button p-2 rounded" data-category="Personal">Personal</button>
         <button class="category-button p-2 rounded" data-category="Retail">Retail</button>
         <button class="category-button p-2 rounded" data-category="Corporate">Corporate</button>
-        <button class="category-button p-2 rounded" data-category="Corporate">PNG Pics</button>
+        <button class="category-button p-2 rounded" data-category="PNG">PNG Pics</button>
     </div>
     <div id="galleryGrid" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4"></div>
 </main>
