--- a/gallery.html
+++ b/gallery.html
@@ -113,7 +113,7 @@ function loadLogosFromFirebase(selectedCategory) {
                 logosFound = true;
 
                 // 1. Define the watermark transformation using your Public ID
-                const watermarkTransformation = "l_LOGOBUCKET_tdk1fj,o_60,g_center";
+                const watermarkTransformation = "l_LOGOBUCKET_bi96dx,o_60,g_center";
 
                 // 2. Create the new watermarked URL
                 const watermarkedImageUrl = imageUrl.replace("/upload/", `/upload/${watermarkTransformation}/`);
