--- a/admin.html
+++ b/admin.html
@@ -72,7 +72,7 @@ transform: scale(1.05);
     <option value="Retail">Retail</option>
     <option value="PNG">PNG</option>
   </select>
-  <label class="block mb-2" for="logoPrice">Price (e.g., $49 or ₹2999)</label>
+  <label class="block mb-2" for="logoPrice">Price</label>
   <input type="text" id="logoPrice" required class="w-full p-2 mb-4 rounded text-black" />
 
   <button type="submit" class="bg-yellow-400 text-black px-4 py-2 rounded hover:bg-yellow-500">
